<resources>
    <string name="app_name">Hexadecimální Binární Kalkulačka</string>
    <string name="inputHEX1">Zadejte 1. hexadecimální číslo</string>
    <string name="inputBIN1">Zadejte 1. binární číslo</string>
    <string name="inputDEC1">Zadejte 1. dekadické číslo</string>
    <string-array name="spinner_mode">
        <item>Dekadický součet</item>
        <item>Binární součet</item>
        <item>Hexadecimální součet</item>
    </string-array>
    <string name="inputHEX2">Zadejte 2. hexacedimální číslo</string>
    <string name="inputDEC2">Zadejte 2. dekadické číslo</string>
    <string name="inputBIN2">Zadejte 2. binární číslo</string>
    <string name="compute">Spočítat</string>
    <string name="errorEnterBothValues">Zadejte obě hodnoty</string>
    <string name="aboutAppName">Hexadecimální Binární Decimální Kalkulačka</string>
    <string name="aboutAuthor">GitHub Autora</string>
    <string-array name="convertSpinner_mode">
        <item>Decimální</item>
        <item>Binární</item>
        <item>Hexadecimální</item>
    </string-array>
    <string name="navCalc">Kalkulačka</string>
    <string name="navConv">Převod</string>
    <string name="navAbout">O aplikaci</string>
    <string name="convInputDEC">Zadejte dekadické číslo</string>
    <string name="convInputHEX">Zadejte hexadecimální číslo</string>
    <string name="convInputBIN">Zadejte binární číslo</string>
    <string name="convConvertBTN">Převést</string>
    <string name="restoreMain">Obnovit</string>
    <string name="errorConvEnterValidValue">Zadejte validní hodnotu</string>
    <string name="binary">Binární</string>
    <string name="decimal">Decimální</string>
    <string name="hexadecimal">Hexadecimální</string>
    <string name="errorMainWriteToFile">Chyba zapsání do souboru!</string>
    <string name="navHistory">Historie</string>
    <string name="errorHistoryReadFromFile">Chyba čtení ze souboru!</string>
    <string name="historyFile">history.txt</string>
    <string name="aboutBakalari">Zkontrolovat Bakaláře</string>
    <string name="settingsPassword">Heslo</string>
    <string name="settingsConfirm">Potvrdit</string>
    <string name="navSettings">Nastavení</string>
    <string name="settingsUsername">Uživatelské jméno</string>
    <string name="aboutWrongURL">Špatná URL adresa a nebo Bakaláři nefungují</string>
    <string name="aboutWrongLogin">Máš špatné jméno/heslo</string>
    <string name="aboutBakalariWorks">Bakaláři nečekaně fungují</string>
    <string name="aboutBakalariNotWorks">Bakaláři nepřekvapivě nefungují</string>
</resources>